--- a/my-app/Server/package.json
+++ b/my-app/Server/package.json
@@ -10,6 +10,7 @@
   "author": "abhay_madaan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "json-server": "^0.17.0",
     "mongoose": "^6.6.1",
